# embedding-finetune

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: results.json  run_train.py
src/embedding_finetune/: __init__.py  dataset.py  head.py  retrieval.py  train.py
tests/: test_head_and_retrieval.py
