[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding-finetune"
version = "0.1.0"
description = "Train a small projection head on top of a frozen embedder for domain-specific retrieval. CPU-friendly recipe + measurable recall lift."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tajaddin Gafarov", email = "gafarovtajaddin@gmail.com" }]
keywords = ["embeddings", "retrieval", "rag", "fine-tuning", "projection-head", "contrastive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "fastembed>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/Tajaddin/embedding-finetune"
Repository = "https://github.com/Tajaddin/embedding-finetune"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
